# HQ-Core

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile-release  README.md  build-release
migrations/20200707_devices_table_add/: up.sql
migrations/20200708_logs_table_add/: down.sql  up.sql
migrations/20200709_cluster_table_add/: down.sql  up.sql
migrations/20200710_devices_to_cluster_table_add/: down.sql  up.sql
src/: main.rs  schema.rs
src/handlers/: clusters.rs  device_cluster_pairs.rs  devices.rs  index.rs  logs.rs  mod.rs
src/models/: cluster.rs  device.rs  device_cluster_pair.rs  log.rs  mod.rs
