[package]
name = "hq-core"
version = "0.1.0"
authors = ["Project_HQ <amusciano@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0-alpha.3"
actix-web = "3.0.0-alpha.3"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
futures = "0.3.5"
openssl = "*"

