[package]
name = "hq-core"
description = "Restful Postgres microservice"
version = "0.1.0"
authors = ["Project_HQ <amusciano@gmail.com>"]
license-file = "LICENSE"
edition = "2018"
readme = "README.md"
homepage = "https://projecthq.ml"
repository = "https://github.com/Project-HQ/HQ-Core/"
keywords = ["postgresql","database","microservice","REST"]
categories = ["database","web-programming::http-server"]

[badges]
travis-ci = { repository = "Project-HQ/HQ-Core", branch = "master"  }
maintenance = { status = "actively-developed" }

[dependencies]
actix = "0.10.0-alpha.3"
actix-web = "3.0.0-alpha.3"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "serde_json","chrono"] }
dotenv = "0.15.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
futures = "0.3.5"
openssl = "0.10"
chrono = { version = "0.4", features = ["serde"] }

